--- a/src/app/authentication/authentication.component.html
+++ b/src/app/authentication/authentication.component.html
@@ -1,25 +1,7 @@
 <div *ngIf="$auth | async">
-  <button (click)="logout()">Logout</button>
+  <button md-raised-button (click)="logout()" color="primary">Logout</button>
 </div>
 
 <div *ngIf="!($auth | async)">
-  <div *ngIf="!loading">
-    <form (ngSubmit)="login()" #loginForm="ngForm">
-      <input name="email" [(ngModel)]="email" type="email" required placeholder="email">
-      <input name="password" [(ngModel)]="password" type="password" required placeholder="password">
-      <div class="error">{{error}}</div>
-      <button type="submit" [disabled]="!loginForm.valid">Login</button>
-    </form>
-    <form (ngSubmit)="register()" #registerForm="ngForm">
-        <input name="email" [(ngModel)]="email" type="email" required placeholder="email">
-        <input name="password" [(ngModel)]="password" type="password" required placeholder="password">
-        <input name="retypePassword" [(ngModel)]="retypePassword" type="password" required placeholder="retype password">
-        <div class="error">{{error}}</div>
-        <button type="submit" [disabled]="!registerForm.valid || password !== retypePassword">Register</button>
-    </form>
-  </div>
-
-  <div *ngIf="loading">
-    Loading...
-  </div>
+  <button md-raised-button (click)="login()" color="primary">Login</button>  
 </div>
