--- a/src/app/musical-box-list/musical-box-list.component.html
+++ b/src/app/musical-box-list/musical-box-list.component.html
@@ -1,3 +1,4 @@
-<div *ngFor="let box of musicalBoxList; let i=index" (click)="onSelectBox(box)">
-  {{box.name}}
-</div>
+<md-list *ngFor="let box of musicalBoxList; let i=index" (click)="onSelectBox(box)">
+  <md-list-item>{{box.name}}</md-list-item>
+  <md-divider></md-divider>
+</md-list>
