--- a/src/app/musical-box/musical-box.component.css
+++ b/src/app/musical-box/musical-box.component.css
@@ -1,7 +1,13 @@
+:host {
+    display: flex;
+    flex-direction: column;
+    padding: 30px;
+    align-items: center;
+}
 .row {
     display:flex;
 }
 
 .highlight {
-    background-color: greenyellow;
+    background-color: #FF4081;
 }
