--- a/src/app/musical-box/musical-box.component.html
+++ b/src/app/musical-box/musical-box.component.html
@@ -1,10 +1,11 @@
-<input type="checkbox" [(ngModel)]="box.public" (change)="onUpdateBox()" [disabled]="disabled">
-<label>Public</label>
-<input type="text" [(ngModel)]="box.name" (change)="onUpdateBox()" [disabled]="disabled">
-<label>Musical Box Name</label>
-
+<div>
+  <md-input-container>
+    <input mdInput type="text" [(ngModel)]="box.name" (change)="onUpdateBox()" [disabled]="disabled">
+  </md-input-container>
+  <md-slide-toggle type="checkbox" [(ngModel)]="box.public" (change)="onUpdateBox()" [disabled]="disabled">Show in public list</md-slide-toggle>
+</div>
 <div class="row" *ngFor="let row of box.data; let i=index">
   <div [ngClass]="currentNote == j ? 'highlight' : '' " *ngFor="let col of row; let j=index">
-    <input type="checkbox" [attr.checked]="col ? 'checked' : null" (change)="toggleNote(i, j)" [disabled]="disabled">
+    <md-checkbox [checked]="col" (change)="toggleNote(i, j)" [disabled]="disabled"></md-checkbox>
   </div>
 </div>
